Fix: Profile banner text alignment

--- a/static/less/mobile.less
+++ b/static/less/mobile.less
@@ -124,6 +124,7 @@
 
 		.panel-profile .panel-profile-header .img-profile-data {
 			padding-top:50px !important;
+            padding-left: 130px;
 		}
 	}
 
