--- a/static/less/panel.less
+++ b/static/less/panel.less
@@ -193,6 +193,7 @@
 
     .panel-profile .panel-profile-header .img-profile-data h1 {
         font-size: 20px !important;
+        margin-bottom:2px;
     }
 }
 
